--- a/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
+++ b/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
@@ -14,3 +14,12 @@ dss.europa.oj.ojeu_url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=urise
 #
 java.utils.operation.auth.mode=server
 java.utils.operation.auth.force=no
+
+#
+# Spring boot configuration
+#
+# Security
+spring.security.user.name=restUser
+spring.security.user.password=restPassword
+
+# Server
