A fost adaugat suport HTTPS + certificat pfx specific
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
+++ b/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
@@ -22,4 +22,11 @@ java.utils.operation.auth.force=no
 spring.security.user.name=restUser
 spring.security.user.password=restPassword
 
+# Enable HTTPS
+server.port=8443
+server.ssl.key-store=classpath:keystore/server.pfx
+server.ssl.key-store-password=welcome1
+server.ssl.key-store-type=pkcs12
+server.ssl.key-password=welcome1
+
 # Server
