Rework controller validare si parsare LOTL
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/SpringBootServer/JavaRestEuTlProviderApi/pom.xml
+++ b/SpringBootServer/JavaRestEuTlProviderApi/pom.xml
@@ -89,6 +89,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Google Guava for Monitor (mutex) support -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
 
         <!-- Spring boot starters -->
         <dependency>
