--- a/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
+++ b/SpringBootServer/JavaRestEuTlProviderApi/src/main/resources/application.properties
@@ -16,6 +16,19 @@ java.utils.operation.auth.mode=server
 java.utils.operation.auth.force=no
 
 #
+# Multithreading options
+#
+dss.europa.tl.validation.run_interval_s=600
+dss.europa.tl.parser.run_interval_s=600
+
+#
+# Logging
+#
+logging.level.root=WARN
+logging.level.com.alint=info
+
+
+#
 # Spring boot configuration
 #
 # Security
