--- a/SpringBootServer/JavaRestEuTlProviderApi/pom.xml
+++ b/SpringBootServer/JavaRestEuTlProviderApi/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <dss.version>5.11.1</dss.version>
     </properties>
 
     <dependencies>
@@ -48,44 +49,46 @@
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-service</artifactId>
-            <version>5.11.1</version>
+            <version>${dss.version}</version>
         </dependency>
-
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-tsl-validation</artifactId>
-            <version>5.11.1</version>
+            <version>${dss.version}</version>
         </dependency>
-
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-utils</artifactId>
-            <version>5.11.1</version>
+            <version>${dss.version}</version>
         </dependency>
-
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-xades</artifactId>
-            <version>5.11.1</version>
+            <version>${dss.version}</version>
         </dependency>
-
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-utils-apache-commons</artifactId>
-            <version>5.11.1</version>
+            <version>${dss.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-crl-parser-stream</artifactId>
+            <version>${dss.version}</version>
+        </dependency>
+
 
 
         <!-- JAXB support -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
+            <version>2.4.0-b180830.0359</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.1</version>
+            <version>2.4.0-b180830.0438</version>
             <scope>runtime</scope>
         </dependency>
 
