View pentru trusted list pe tari stadiu intermediar
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Web/EuTlWebView/src/main/resources/application.properties
+++ b/Web/EuTlWebView/src/main/resources/application.properties
@@ -14,3 +14,11 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore/webview.pfx
 server.ssl.key-store-password=welcome1
 server.ssl.enabled=true
+
+#
+# Logging Configuration
+#
+
+spring.application.name=EuTLWebView
+server.servlet.context-path=/webview
+logging.log4j2.config.override=classpath:log4j2-spring.xml
