--- a/Server/JavaRestEuTlProviderApi/pom.xml
+++ b/Server/JavaRestEuTlProviderApi/pom.xml
@@ -15,7 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>JavaRestEuTlProviderApi</name>
     <description>JavaRestEuTlProviderApi</description>
-
+    <packaging>jar</packaging>
     <properties>
         <java.version>17</java.version>
         <dss.version>5.11.1</dss.version>
@@ -109,7 +109,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -138,6 +137,7 @@
     </dependencies>
 
     <build>
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
