Finalizare webview Browser trusted lists
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Server/JavaRestEuTlProviderApi/pom.xml
+++ b/Server/JavaRestEuTlProviderApi/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
 
 
-        <!-- European committee DSS libraries -->
+        <!-- European commission DSS libraries -->
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>dss-service</artifactId>
