--- a/Web/EuTlWebView/src/main/resources/application.properties
+++ b/Web/EuTlWebView/src/main/resources/application.properties
@@ -20,5 +20,5 @@ server.ssl.enabled=true
 #
 
 spring.application.name=EuTLWebView
-server.servlet.context-path=/webview
+server.servlet.context-path=/
 logging.log4j2.config.override=classpath:log4j2-spring.xml
