--- a/Web/EuTlWebView/src/main/resources/application.properties
+++ b/Web/EuTlWebView/src/main/resources/application.properties
@@ -16,9 +16,33 @@ server.ssl.key-store-password=welcome1
 server.ssl.enabled=true
 
 #
+# SpringBoot configuration for uploading files
+#
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=${java.io.tmpdir}
+
+
+#
 # Logging Configuration
 #
 
 spring.application.name=EuTLWebView
 server.servlet.context-path=/
 logging.log4j2.config.override=classpath:log4j2-spring.xml
+
+#
+# Info for accessing validation engines
+#
+engine.java.addr=localhost
+engine.java.port=30001
+
+engine.cpp.addr=localhost
+engine.cpp.port=30002
+
+engine.csharp.addr=localhost
+engine.csharp.port=30003
+
+engine.python.addr=localhost
+engine.python.port=30004
