Fix keystore cu certificate OJ care nu se incarcau
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Engine/Java/JavaDSSEngine/src/main/resources/application.properties
+++ b/Engine/Java/JavaDSSEngine/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 socket.port=30001
 
-java.security.keystore.default-path=C:/Program Files/Java/jdk-19/lib/security/cacerts
+security.keystore.oj-path=classpath:keystore/ojks.jks
 
 dss.tools.lotl_url=https://ec.europa.eu/tools/lotl/eu-lotl.xml
 dss.tools.oj_url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
