--- a/Server/JavaRestEuTlProviderApi/src/main/resources/application.properties
+++ b/Server/JavaRestEuTlProviderApi/src/main/resources/application.properties
@@ -43,3 +43,4 @@ server.ssl.key-store-type=pkcs12
 server.ssl.key-password=welcome1
 
 # Server
+security.keystore.oj-path=classpath:keystore/ojjks.jks
