ACUM fix oj certs not loading
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Server/JavaRestEuTlProviderApi/src/main/resources/application.properties
+++ b/Server/JavaRestEuTlProviderApi/src/main/resources/application.properties
@@ -44,3 +44,4 @@ server.ssl.key-password=welcome1
 
 # Server
 security.keystore.oj-path=classpath:keystore/ojjks.jks
+security.keystore.oj.certs.dir=classpath:keystore/OJ/
